--- a/css/cabecera.css
+++ b/css/cabecera.css
@@ -95,8 +95,71 @@ header {
   text-decoration: underline;
   color: white;
 }
+@media screen and (max-width:900px) {
+
+  .contenido {
+    width: 100%;
+  }
+
+  header {
+    background: #5b7989;
+    font-family: 'Dancing Script', cursive;
+    color: white;
+    width: 100%;
+    border-radius: 10px 10px 0px 0px;
+    }
+
+  #cabecera {
+    width:100%;
+    min-height: 100px;
+    margin: auto;
+
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #titulo {
+    width: 100%;
+    min-width: 400px;
+    margin:auto;
+  }
+
+  #menu {
+      width: 100%;
+      min-width: 300px;
+      font-size: 20px;
+      margin: 15px auto;
+      padding: 0;
+  }
+
+  #menu nav ul{
+      height: 100%;
+      list-style: none;
+      text-align: center;
+      margin: auto;
+      padding: 0;
+      float: none;
+
+  }
+  #menu nav ul li {
+    margin: 0px;
+    padding: 0;
+  }
+
+  #menu nav ul li a {
+    text-decoration: underline;
+    color: white;
+  }
+
+}
 
 @media screen and (max-device-width:900px) {
+
   .contenido {
     width: 100%;
   }
